home-cluster/mqtt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  namespace: mqtt
  annotations:
    metallb.universe.tf/address-pool: default-addresspool
    metallb.universe.tf/loadBalancerIPs: 192.168.1.240
spec:
  selector:
    app: mosquitto
  ports:
    - name: mqtt
      port: 1883
      targetPort: 1883
  type: LoadBalancer
